--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@cloudinary/react": "^1.11.2",
+    "@cloudinary/url-gen": "^1.16.0",
     "@tanstack/react-query": "^5.17.19",
     "firebase": "^10.7.2",
     "react": "^18.2.0",
